--- a/LoopOnboardingKitUI/fr.lproj/Localizable.strings
+++ b/LoopOnboardingKitUI/fr.lproj/Localizable.strings
@@ -4,6 +4,12 @@
 /* Onboarding, Apple Health Permissions intro paragraph */
 "Apple Health can be used to store blood glucose, insulin and carbohydrate data from Loop.\n\nIf you give Loop permission, Loop can also read glucose and insulin data from glucometers and insulin pens that support Apple Health" = "Apple Health peut être utilisé pour stocker les données relatives à la glycémie, à l'insuline et aux glucides de Loop.\n\nSi vous l'autorisez, Loop peut également lire les données relatives à la glycémie et à l'insuline des glucomètres et des stylos à insuline compatibles avec Apple Health.";
 
+/* Descriptive text on WelcomeView */
+"Before using Loop you need to configure a few settings. These settings should be entered with precision and care; they are a critical part of how Loop determines the right amount of insulin to deliver.\n\nIf you are new to Loop, work with your diabetes support team to determine the settings that work best for you." = "Avant d'utiliser Loop, vous devez configurer quelques paramètres. Ces paramètres doivent être saisis avec précision et attention ; ils sont un élément essentiel pour que Loop calcule les bonnes quantités d'insuline à administrer.\n\nSi vous n'avez jamais utilisé Loop, travaillez avec votre équipe de soutien pour le diabète pour déterminer les paramètres qui vous conviennent le mieux.";
+
+/* Button title for skipping setting import from nightscout */
+"Do Not Import Settings" = "Ne pas importer les paramètres";
+
 /* Button title for choosing to import settings from nightscout */
 "Import Saved Settings" = "Importer les paramètres sauvegardés";
 
@@ -12,4 +18,22 @@
 
 /* Descriptive text on OnboardingChooserView */
 "Loop can work with Nightscout to provide remote caregivers a way to see what Loop is doing. Nightscout use is completely optional with Loop, and you can always set it up later." = "Loop peut fonctionner avec Nightscout pour permettre aux soignants distants de voir ce que fait Loop. L'utilisation de Nightscout est totalement facultative avec Loop, et vous pouvez toujours la configurer ultérieurement.";
+
+/* Title on OnboardingChooserView */
+"Nightscout" = "Nightscout";
+
+/* Therapy settings save button title */
+"Save Settings" = "Enregistrer les paramètres";
+
+/* Title on ImportSettingsView */
+"Settings Found" = "Paramètres trouvés";
+
+/* Button title for choosing onboarding without nightscout */
+"Setup Loop without Nightscout" = "Configurer Loop sans Nightscout";
+
+/* Button title for starting apple health permissions request */
+"Share With Apple Health" = "Partager avec Apple Santé";
+
+/* Button title for choosing onboarding with nightscout */
+"Use Nightscout with Loop" = "Utiliser Nightscout avec Loop";
 
