--- a/LoopOnboardingKitUI/nl.lproj/Localizable.strings
+++ b/LoopOnboardingKitUI/nl.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "Apple Health" = "Apple Gezondheid";
 
 /* Onboarding, Apple Health Permissions intro paragraph */
-"Apple Health can be used to store blood glucose, insulin and carbohydrate data from Loop.\n\nIf you give Loop permission, Loop can also read glucose and insulin data from glucometers and insulin pens that support Apple Health" = "Apple Gezondheid kan worden gebruikt om glucose-, insuline- en koolhydraatgegevens van Loop op te slaan. \n\nWanneer je Loop toestemming geeft, kan Loop ook glucose- en insulinegegevens lezen van glucosemeters en insulinepennen die Apple Gezondheid ondersteunen.";
+"Apple Health can be used to store blood glucose, insulin and carbohydrate data from Loop.\n\nIf you give Loop permission, Loop can also read glucose and insulin data from glucometers and insulin pens that support Apple Health" = "Apple Gezondheid kan worden gebruikt om bloedglucose-, insuline- en koolhydraatgegevens van Loop op te slaan. \n\nWanneer je Loop toestemming geeft, kan Loop ook glucose- en insulinegegevens lezen van glucosemeters en insulinepennen die Apple Gezondheid ondersteunen.";
 
 /* Descriptive text on WelcomeView */
 "Before using Loop you need to configure a few settings. These settings should be entered with precision and care; they are a critical part of how Loop determines the right amount of insulin to deliver.\n\nIf you are new to Loop, work with your diabetes support team to determine the settings that work best for you." = "Voordat je Loop gebruikt, moet je een paar instellingen configureren. Deze instellingen moeten met precisie en zorg worden ingevoerd; ze zijn een cruciaal onderdeel van hoe Loop de juiste hoeveelheid toe te dienen insuline bepaalt.\n\nAls je nieuw bent met Loop, werk dan samen met je diabetesondersteuningsteam om te bepalen welke instellingen het beste voor je werken.";
@@ -17,7 +17,7 @@
 "Let's Go!" = "Let's Go!";
 
 /* Descriptive text on OnboardingChooserView */
-"Loop can work with Nightscout to provide remote caregivers a way to see what Loop is doing. Nightscout use is completely optional with Loop, and you can always set it up later." = "Loop kan met Nightscout werken om zorgverleners op afstand te laten zien wat Loop doet. Het gebruik van Nightscout in Loop is volledig optioneel, je kunt het altijd later instellen.";
+"Loop can work with Nightscout to provide remote caregivers a way to see what Loop is doing. Nightscout use is completely optional with Loop, and you can always set it up later." = "Loop kan met Nightscout samenwerken om zorgverleners op afstand te laten zien wat Loop doet. Het gebruik van Nightscout in Loop is volledig optioneel, je kunt het altijd later instellen.";
 
 /* Title on OnboardingChooserView */
 "Nightscout" = "Nightscout";
